--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </li>
 
                         <li>
-                           <a class="text-reset" href="https://www.facebook.com/kero.maged.771282" target="_blank">
+                           <a class="text-reset" href="https://www.linkedin.com/in/kerols-maged-7a7b56239/" target="_blank">
                               <i class="fab fa-linkedin"></i>
                            </a>
                         </li>
